# histomap

./: .gitignore  Makefile  PLAN.md  README.md  build.py  period_links.json  period_links.yaml  periods.json  pyproject.toml  requirements.txt  schema.py  transitions.yaml
periods/: asuka_period.yaml  early_dynastic_mesopotamia.yaml  egyptian_middle_kingdom.yaml  egyptian_old_kingdom.yaml  european_bronze_age.yaml  european_iron_age.yaml  european_neolithic.yaml  jomon_period.yaml  kofun_period.yaml  mesoamerican_classic.yaml  mesoamerican_postclassic.yaml  mesoamerican_preclassic.yaml  tibet_under_yuan_administrative_rule_period.yaml  uruk_period.yaml  yayoi_period.yaml
pipeline/: apply_review_decisions.py  audit_civilizations.py  backfill_entity_types.py  cache_wikidata_type_ancestors.py  classify_period_roles.py  compute_prominence.py  compute_weights.py  enrich_geography.py  enrich_relationships.py  extract_hyde.py  extract_maddison.py  extract_seshat.py  extract_wikidata.py  filter_wikidata_types.py  map_maddison.py  rebuild_timeline.py  reconcile.py  report_period_pilot.py  review_cli.py  spotcheck.py  wd_to_yaml.py  weights.toml  wikidata_types.toml
polities/: aarianian_union.yaml  abarsal.yaml  abazinia.yaml  abbasid_caliphate.yaml  abbasid_caliphate_of_cairo.yaml  abbey_of_reichenau.yaml  abhira_kingdom.yaml  abia_state.yaml  abyan.yaml  aceh_sultanate.yaml  achaemenid_empire.yaml  achrol.yaml  adal_sultanate.yaml  adamawa_emirate.yaml  adamawa_state.yaml  aden_protectorate.yaml  adygea.yaml  aerican_empire.yaml  aetna.yaml  afghanistan.yaml  afrighids.yaml  (+4892 more)
(+65 files in other folders)
